parte2-backend-v2.1/codigo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cotel-ingress
  namespace: proyecto-integrador
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - host: cotel.test
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
